# Predictive_Analysis_of_Medical_Expenses

./: README.md  pyproject.toml
data/processed/: planosaude_processed.csv
health_insurance_plan_classification/: rb_linear_regression_train_model1.py  rb_linear_regression_train_model2.py  rb_linear_regression_train_model3.py  utils.py
health_insurance_plan_classification/mlruns/0/: meta.yaml
health_insurance_plan_classification/mlruns/287589551322720626/: meta.yaml
mlruns/.trash/209625196404749461/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/57475037d4634be894483652c8b92a32/: meta.yaml
mlruns/0/80d92dec80cc4fb4a4c02e704906ff53/: meta.yaml
mlruns/0/d3c46c98f50d46e79829aede2320845f/: meta.yaml
mlruns/333025407033202939/: meta.yaml
mlruns/333025407033202939/82129c19c012450cb25044ca861ab7f9/: meta.yaml
mlruns/333025407033202939/f78c628f730a4602b9d96a05ee28e128/: meta.yaml
mlruns/540075501142396164/: meta.yaml
mlruns/540075501142396164/0083bf5412c04c21b0530e18b636a714/: meta.yaml
mlruns/540075501142396164/0217481da6f04cc49bbb97da4503dd1d/: meta.yaml
mlruns/540075501142396164/059870032d1b4a2e985fafa249ab8f3a/: meta.yaml
mlruns/540075501142396164/36f9a8d18aa343aba82ff5ba02be6b01/: meta.yaml
mlruns/540075501142396164/3e56999993d14bf5906528cb98c89c56/: meta.yaml
mlruns/540075501142396164/527735dc878d4831903c058832e5ce18/: meta.yaml
mlruns/540075501142396164/76820e4e042044c093476979c4cd2fc7/: meta.yaml
mlruns/601964305368167629/: meta.yaml
notebooks/: processed.ipynb  raw.ipynb
tests/: conftest.py  test_feature_selection.py  test_load_data.py
(+285 files in other folders)
