[tool.poetry]
name = "health-insurance-plan-classification"
version = "0.1.0"
description = ""
authors = ["rabernardino <rabernardino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
mlflow = "^2.15.1"
python-dotenv = "^1.0.1"
stepwise-process = "^2.5"
sfrancia = "^1.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
test = 'pytest --cov=Health_Insurance_Plan_Classification -vv'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
